# src/swagger-output.json
@@ -366,6 +366,29 @@
           }
         }
       },
+      "FileEntry": {
+        "type": "object",
+        "required": [
+          "id",
+          "user_id",
+          "file_desc",
+          "create_date"
+        ],
+        "properties": {
+          "id": {
+            "type": "number"
+          },
+          "user_id": {
+            "type": "string"
+          },
+          "file_desc": {
+            "type": "string"
+          },
+          "create_date": {
+            "type": "string"
+          }
+        }
+      },
       "FullEvent": {
         "type": "object",
         "required": [
@@ -654,6 +677,71 @@
           },
           "400": {
             "description": "Invalid query parameters"
+          },
+          "500": {
+            "description": "Server error"
+          }
+        }
+      }
+    },
+    "/adviser/search-adviser": {
+      "post": {
+        "summary": null,
+        "description": null,
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/Condition"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "page": {
+                      "type": "integer",
+                      "format": "int32",
+                      "example": 1
+                    },
+                    "page_size": {
+                      "type": "integer",
+                      "format": "int32",
+                      "example": 10
+                    },
+                    "total_items": {
+                      "type": "integer",
+                      "format": "int32",
+                      "example": 100
+                    },
+                    "totalPages": {
+                      "type": "integer",
+                      "format": "int32",
+                      "example": 10
+                    },
+                    "events": {
+                      "type": "array",
+                      "events": {
+                        "type": "object",
+                        "schema": {
+                          "$ref": "#/components/schemas/Adviser"
+                        }
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "A client error occurred"
           },
           "500": {
             "description": "Server error"
@@ -1278,6 +1366,54 @@
                 }
               }
             }
+          }
+        }
+      }
+    },
+    "/admin/get-applicant-files/{user_id}": {
+      "get": {
+        "summary": "Returns files uploaded by applicant",
+        "description": "Returns files uploaded by applicant",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "parameters": [
+          {
+            "name": "user_id",
+            "in": "path",
+            "description": "user_id",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "advisers": {
+                      "type": "object",
+                      "schema": {
+                        "$ref": "#/components/schemas/FileEntry"
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "A client error occurred"
+          },
+          "500": {
+            "description": "Server error"
           }
         }
       }
@@ -2335,6 +2471,42 @@
                   }
                 }
               }
+            }
+          },
+          "400": {
+            "description": "A client error occurred"
+          },
+          "500": {
+            "description": "Server error"
+          }
+        }
+      }
+    },
+    "/admin/get-file/{file_id}": {
+      "get": {
+        "summary": "Returns file data encoded in Base 64",
+        "description": "Returns file data encoded in Base 64",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "parameters": [
+          {
+            "name": "file_id",
+            "in": "path",
+            "description": "user_id",
+            "required": true,
+            "schema": {
+              "type": "integer"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "application/text": null
             }
           },
           "400": {
